Fix alignment problem caused by "Add to cart" button

--- a/mercantile/static/mercantile/css/base.css
+++ b/mercantile/static/mercantile/css/base.css
@@ -53,7 +53,7 @@ input {
     color: var(--color-contrast);
 }
 
-.book-list {
+.book-results {
     height: 210px;
 }
 
